--- a/about1.html
+++ b/about1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/about1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
     
     <script src="js/jquery-3.4.1.min.js"></script>
