--- a/about1.html
+++ b/about1.html
@@ -175,7 +175,7 @@
             
             <div class="footer">
                 <div class="footer_logo">
-                    <h2><img src="images/logo.png" alt="푸터이미지"></h2>
+                    <h2><img src="images/footer_logo.png" alt="푸터이미지"></h2>
                 </div>
                 <div class="footer_container">
                     <div class="footer_list">
