--- a/business.html
+++ b/business.html
@@ -134,7 +134,7 @@
                     <div class="con_1">
                         <div class="bgimg">
                             <div class="wrapper">
-                                <img src="images/business/refining.png" alt="">
+                                <img src="images/business/refining.png" alt="정유사업이미지">
                             </div>
                             <div class="con_1_txt">
                                 <h3>Oil <span class="impact">Refining Business</span></h3>
@@ -150,7 +150,7 @@
                     <div class="con_2">
                         <div class="bgimg">
                             <div class="wrapper">
-                                <img src="images/business/petrochemical.png" alt="">
+                                <img src="images/business/petrochemical.png" alt="석유화학사업이미지">
                             </div>
                             <div class="con_2_txt">
                                 <h3><span class="impact">Petrochemical</span> Business</h3>
@@ -167,7 +167,7 @@
                     <div class="con_3">
                         <div class="bgimg">
                             <div class="wrapper">
-                                <img src="images/business/lubricating.png" alt="">
+                                <img src="images/business/lubricating.png" alt="윤활기유사업이미지">
                             </div>
                             <div class="con_3_txt">
                                 <h3>Lubricating <span class="impact">Business</span></h3>
@@ -183,7 +183,7 @@
                     <div class="con_4">
                         <div class="bgimg">
                             <div class="wrapper">
-                                <img src="images/business/tire.png" alt="">
+                                <img src="images/business/tire.png" alt="제철화학사업이미지">
                             </div>
                             <div class="con_4_txt">
                                 <h3><span class="impact">Ferrous Chemistry</span> Business</h3>
@@ -199,7 +199,7 @@
                     <div class="con_5">
                         <div class="bgimg">
                             <div class="wrapper">
-                                <img src="images/business/terminal.png" alt="">
+                                <img src="images/business/terminal.png" alt="오일터미널사업">
                             </div>
                             <div class="con_5_txt">
                                 <h3>Oil Terminal <span class="impact">Business</span></h3>
@@ -217,7 +217,7 @@
             
             <div class="footer">
                 <div class="footer_logo">
-                    <h2><img src="images/logo.png" alt="푸터이미지"></h2>
+                    <h2><img src="images/footer_logo.png" alt="푸터이미지"></h2>
                 </div>
                 <div class="footer_container">
                     <div class="footer_list">
