--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 </div>
                 <div class="footer">
                     <div class="footer_logo">
-                        <h2><img src="images/logo.png" alt="푸터로고"></h2>
+                        <h2><img src="images/footer_logo.png" alt="푸터로고"></h2>
                     </div>
                     <div class="footer_container">
                         <div class="footer_list">
