--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                         if ($(elmSelecter).next() != undefined) {
                             try{
                                 moveTop = $(elmSelecter).next().offset().top;
-                                /*$(".nav_gnb ul li a").css("color","black");
-                                $(".nav_info ul li a").css("color","black");*/
                             }catch(e){}
                         }
                     // 마우스휠을 아래에서 위로
@@ -44,8 +42,6 @@
                         if ($(elmSelecter).prev() != undefined) {
                             try{
                                 moveTop = $(elmSelecter).prev().offset().top;
-                               /* $(".nav_gnb ul li a").css("color","white");
-                                $(".nav_info ul li a").css("color","white");*/
                             }catch(e){}
                         }
                     }
@@ -154,26 +150,6 @@
             $(".quick>ul>li").eq(j).addClass("active");
         });
 
-        /*$(".m1").click(function(e){
-            var at = $(".s1").offset().top;
-            e.preventDefault();
-            $("html,body").animate({scrollTop:at},1500);
-        });
-        $(".m2").click(function(e){
-            var at = $(".s2").offset().top;
-            e.preventDefault();
-            $("html,body").animate({scrollTop:at},1500);
-        });
-        $(".m3").click(function(e){
-            var at = $(".s3").offset().top;
-            e.preventDefault();
-            $("html,body").animate({scrollTop:at},1500);
-        });
-        $(".m4").click(function(e){
-            var at = $(".s4").offset().top;
-            e.preventDefault();
-            $("html,body").animate({scrollTop:at},1500);
-        });*/
 
 
         $(".quick>ul>li:nth-child(1)").click(function(e){
@@ -378,9 +354,9 @@
                 </div>
                 <div class="bottom">
                     <ul>
-                        <li><img src="images/ex1.jpg" alt="메인company배경이미지"><p>COMPANY</p><span>아시아 · 태평양 지역에서 가장 경쟁력 있고 존경받는 에너지 · 화학 기업</span></li>
-                        <li><img src="images/ex2.jpg" alt="메인HISTORY배경이미지">
-                        <p>HISTORY</p><span>FLOOD OIL은 2009년 창사 이후 눈부신 성장을 거듭했습니다.</span></li>
+                        <li><a href="about1.html"><img src="images/ex1.jpg" alt="메인company배경이미지"><p>COMPANY</p><span>아시아 · 태평양 지역에서 가장 경쟁력 있고 존경받는 에너지 · 화학 기업</span></a></li>
+                        <li><a href="about1.html"><img src="images/ex2.jpg" alt="메인HISTORY배경이미지">
+                            <p>HISTORY</p><span>FLOOD OIL은 2009년 창사 이후 눈부신 성장을 거듭했습니다.</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -407,25 +383,25 @@
 글로벌 종합에너지기업으로 도약하고 있습니다.
 
 </p>
-                            <a href="#">more</a>
+                            <a href="business.html">more</a>
                         </div>
                         <div class="list l2">
                             <h2>석유화학사업</h2>
                             <h3>혼합자일렌 설비,방향족 설비로<br>석유화학 기초 원료를 생산하고 있습니다.</h3>
                             <p>FLOOD OIL은 국내 정유사와 석유화학사 간 최초의 합작 법인입니다. 방향족 제품 생산공정의 주 원료인 MX(혼합자일렌) 대부분을 수입에 의존했던 두 회사는 2016년 FLOOD OIL 상업가동에 따라 원료 수급의 안정성을 제고할 수 있게 됐습니다.</p>
-                            <a href="#">more</a>
+                            <a href="business.html">more</a>
                         </div>
                         <div class="list l3">
                             <h2>윤활기유사업</h2>
                             <h3>친환경 윤활기유 제품과<br>산업용 윤활유를 만듭니다.</h3>
                             <p>연간 생산 능력 100만 톤 규모의 윤활기유 공장을 가동하고 있습니다. 윤활기유는 FLOOD OIL 고도화공정에서 나오는 잔사유를 원료로 생산되어 자동차, 선박, 산업용 윤활유 완제품의 원료가 됩니다. FLOOD OIL은 친환경 윤활기유를 생산하고 있습니다.</p>
-                            <a href="#">more</a>
+                            <a href="business.html">more</a>
                         </div>
                         <div class="list l4">
                             <h2>제철화학사업</h2>
                             <h3>제철소와 정유시설의 부산물을 활용해<br>타이어 배합제,잉크의 원료 등을 생산합니다.</h3>
                             <p>석탄에서 나오는 콜타르와 원유 정제과정에서 나오는 부산물로 연간 15만 톤의 카본블랙을 만듭니다. 카본블랙은 주로 타이어, 고무 등 강도를 높이는 배합제, 프린터 잉크 등 우리 실생활에 꼭 필요한 제품을 만드는데 쓰입니다.</p>
-                            <a href="#">more</a>
+                            <a href="business.html">more</a>
                         </div>
                         <div class="list l5">
                             <h2>오일터미널사업</h2>
@@ -433,7 +409,7 @@
                             <p>2014년부터 전국 7개 저유소를 위탁운영하며 전국적인 네트워크를 갖추게 됐습니다. 국내는 물론 아시아를 오가는 석유/석유화학제품으로 저장사업의 범위를 확대하고 있습니다.
 
 </p>
-                            <a href="#">more</a>
+                            <a href="business.html">more</a>
                         </div>
                     </div>
                     <div class="right_tab">
@@ -511,29 +487,29 @@
                     <div class="re_list">
                         <ul>
                             <li class="re_list1">
-                                <img src="images/senier.png" alt="메인선배들의이야기이미지">
-                                <div class="list_txt">
-                                    <p class="t_tit">선배들의 이야기</p>
-                                    <p class="t_stxt">고생끝에 낙이온다! 열심히 하면 다 되요</p>
-                                    <p class="year">2018년 입사 설비기술 설비기술1팀 <span>이지원</span></p>
-                                </div>
-                                <div class="bar b1"></div>
+                                <a href="talent.html"><img src="images/senier.png" alt="메인선배들의이야기이미지">
+                                    <div class="list_txt">
+                                        <p class="t_tit">선배들의 이야기</p>
+                                        <p class="t_stxt">고생끝에 낙이온다! 열심히 하면 다 되요</p>
+                                        <p class="year">2018년 입사 설비기술 설비기술1팀 <span>이지원</span></p>
+                                    </div>
+                                    <div class="bar b1"></div></a>
                             </li>
                             <li class="re_list2">
-                                <img src="images/leadership.png" alt="메인인재상이미지">
-                                <div class="list_txt">
-                                    <p class="t_tit">인재상</p>
-                                    <p class="t_stxt">전문역량과 리더십을 겸비한 리더</p>
-                                </div>
-                                <div class="bar b2"></div>
+                                <a href="talent.html"><img src="images/leadership.png" alt="메인인재상이미지">
+                                    <div class="list_txt">
+                                        <p class="t_tit">인재상</p>
+                                        <p class="t_stxt">전문역량과 리더십을 겸비한 리더</p>
+                                    </div>
+                                    <div class="bar b2"></div></a>
                             </li>
                             <li class="re_list3">
-                                <img src="images/talent.png" alt="메인직무소개이미지">
-                                <div class="list_txt">
-                                    <p class="t_tit">직무소개</p>
-                                    <p class="t_stxt">FLOOD OIL의 다양한 직무를 소개합니다.</p>
-                                </div>
-                                <div class="bar b3"></div>
+                                <a href="talent.html"><img src="images/talent.png" alt="메인직무소개이미지">
+                                    <div class="list_txt">
+                                        <p class="t_tit">직무소개</p>
+                                        <p class="t_stxt">FLOOD OIL의 다양한 직무를 소개합니다.</p>
+                                    </div>
+                                    <div class="bar b3"></div></a>
                             </li>
                         </ul>
                     </div>
