--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/prefixfree.min.js"></script>
     <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
     
-    <script type="text/javascript">
+    <script>
         window.onload = function () {
             var elm = ".section";
             $(elm).each(function (index) {
