--- a/talent.html
+++ b/talent.html
@@ -448,6 +448,6 @@
             </div>
         </div>
     </div>
-    <div class="bg_box"><h3><i class="fas fa-times"></i></h3></div>
+    <div class="bg_box"><p><i class="fas fa-times"></i></p></div>
 </body>
 </html>
